<resources>
    <string name="app_name">ECNURun</string>

    <string name="menu_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name = "reminder">Reminder</string>

    <string name="connection_not_avalible">Connection to server has been lost.</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <!--login-->
    <string name="str_login_phone">Phone number</string>
    <string name="toast_login_null">Check your username and password again</string>
    <string name="toast_login_invalid_username">Incorrect email, phone or password</string>
    <string name="toast_login_error">Fail to login</string>
    <string name="str_login">Log in</string>
    <string name="str_forgot">Forgot password?</string>
    <string name="str_signup">Sign up</string>
    <!--register-->
    <string name="str_register_username">Name</string>
    <string name="str_register_password">Password</string>
    <string name="str_register_confirmpassword">Confirm password</string>
    <string name="str_next">Next</string>
    <string name="tv_register_agree">Agree</string>
    <string name="str_register">Register</string>
    <string name="register_verificationhint">Please enter verification code</string>
    <string name="register_sendagain">Send verification code again</string>
    <string name="register_detail_phone">An sms with verification code has sent to your phone</string>
    <string name="str_resend_captcha">Resend after %1$s seconds</string>
    <string name="toast_password_format_errormsg">Password must contain at least 6 characters and no white space</string>
    <string name="toast_two_password_errormsg">Password should match.</string>
    <string name="verify_phone">Verify</string>
    <!--forget psd-->
    <string name="str_input_captcha">Enter Captcha</string>
    <string name="str_get_captcha">Get Captcha</string>
    <string name="str_reset_psd_new">Enter New Password</string>
    <string name="str_reset_psd_confirm">Confirm New Password</string>
    <string name="str_reset_psd_reset">Reset</string>
    <string name="now_phone_not_equals_get_captcha_num">Your can\'t get a captcha for this phone number again</string>
    <string name="btn_verify">Verify</string>
    <!--myprofile-->
    <string name="str_not_set">not set</string>
    <string name="str_female">Female</string>
    <string name="str_male">Male</string>
    <string name="title_profile">Profile</string>
    <string name="str_username">Username</string>
    <string name="str_gender">Gender</string>
    <string name="str_email">Email</string>
    <string name="str_phone">Phone</string>
    <string name="str_id">ID</string>
    <string name="str_name">Name</string>
    <string name="str_balance">Balance</string>
    <string name="str_bind">Bind</string>
    <string name="str_unbind">Unbind</string>
    <string name="toast_success_changed">Changed</string>
    <string name="dialog_warning">Warning</string>
    <string name = "dialog_unbind">Are you sure to unbind?</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="tv_old_psd">Enter Old Password</string>
    <string name="tv_reset_psd">Reset Password</string>
    <string name="tv_reset_psd_new">Enter New Password</string>
    <string name="toast_old_psd_error">Incorrect old password</string>
    <string name="tv_reset_psd_confirm">Confirm New Password</string>
    <string name="tv_reset_psd_reset">Reset</string>
    <string name="str_reset_psd_successfully">Reset password successfully，Please login</string>
    <string name="str_submit">Submit</string>
    <string name="hint_card_no">Campus Card Number</string>
    <string name="hint_card_pass">Campus Card Password</string>
    <string name="toast_id_not_exist">Campus Card not exist</string>
    <string name="toast_bind">Bound</string>
    <string name="toast_fail_bind">Password or ID is incorrect</string>
    <string name="toast_change_phone_success">Phone Changed Successfully</string>
    <string name="toast_email_isnot_effective">A valid email address is required</string>
    <string name="card_balance">Balance</string>
    <string name = "str_message_invalid">Account has not been bound,
        Please go to Profile and Bind</string>
    <!--create new-->
    <string name="str_request_time">Request Time:</string>
    <string name="str_request">Request Time: %1$s</string>
    <string name="str_remark">Remarks</string>
    <string name="tap_to_select">Tab to select</string>
    <string name="str_sucess">Success</string>
    <string name="request_submit">Request is submitted</string>
    <string name="str_fail">Fail</string>
    <string name="fail_submit">Request fail to submit</string>
    <string name="str_create_title">Title</string>
    <string name="str_deadline">Deadline:</string>
    <string name="str_dest">Destination</string>
    <string name="str_charge">Tip Ref: %1$s RMB</string>
    <string name="title_new">New Request</string>
    <string name = "str_set">Set</string>
    <string name = "str_sure">Are you sure to submit?</string>
    <string name="str_currency">RMB</string>
    <string name= "submit">Request is submitted</string>
    <!--pull refresh load more-->
    <string name="xw_ptr_pull_to_refresh">Pull to Refresh</string>
    <string name="xw_ptr_release_to_refresh">Release to Load More</string>
    <string name="xw_ptr_refreshing">Refreshing&#8230;</string>
    <string name="xw_ptr_refresh_succeeded">Refreshed</string>
    <string name="xw_ptr_refresh_failed">Refreshing Failed</string>
    <string name="xw_ptr_pull_up_to_load">Pull Up to Load More</string>
    <string name="xw_ptr_release_to_load">Release to Load</string>
    <string name="xw_ptr_loading">Loading&#8230;</string>
    <string name="xw_ptr_load_succeeded">Loading</string>
    <string name="xw_ptr_load_failed">Loading Failed</string>
    <!--my order-->
    <string name="str_myorder">My Order</string>
    <string name="str_pending">Pending</string>
    <string name="str_completed">Completed</string>
    <string name="str_cancelled">Cancelled</string>
    <string name="str_myorder_info">Order Info</string>
    <string name="str_helper">Helper</string>
    <string name="alert_cancel">Order can\'t be cancelled, please contact our front desk</string>
    <string name="message_cancel">Are you sure you want to cancel?</string>
    <string name="message_done">Are you done?</string>
    <!--helper info-->
    <string name="helper_name">Name: %1$s</string>
    <string name="helper_phone">Phone: %1$s</string>
    <string name="helper_email">Email: %1$s</string>
    <string name="helper_gender">Gender: %1$s</string>
    <string name="helper_charge">Charge: %1$s RMB</string>
    <string name="str_helpers">Helpers</string>
    <string name="str_go_help">Go Run</string>
    <!--run-->
    <string name="str_run">Let\'s Run</string>
    <string name="str_cost">%1$s RMB</string>
    <string name="title_run_list">Run List</string>
    <string name="str_rejected">Rejected</string>
    <string name="str_approving">Approving</string>
    <string name="str_approved">GO</string>
    <string name="str_owner">Owner</string>
    <string name="str_info">Run Info</string>
    <string name="str_done">Done</string>
    <!--nav sidebar-->
    <string name="str_language">Language</string>
    <string name="str_chinese">Chinese</string>
    <string name="str_english">English</string>
    <string name="str_change_psd">Change Password</string>
    <string name="str_tool">Tools</string>
    <string name="str_center">Call Center</string>
    <string name="str_hotline">Hotline: %1$s</string>
    <string name="call_service">Call</string>
    <!--push-->
    <string name="push.fail">Fail to Subscribe</string>
    <string name="push.message.1">Your request got helper</string>
    <string name="push.messge.2">Let\'s run</string>
    <string name="push.message.3">Request is completed</string>
</resources>
