<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_forget_psd_by_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_five"
        >

        <EditText
            android:id="@+id/et_forget_psd_phone"
            style="@style/style_forgot_psd_edittext"
            android:hint="@string/str_login_phone"
            android:inputType="text|phone" />

        <EditText
            android:id="@+id/et_forget_psd_input_captcha"
            android:layout_width="match_parent"
            android:layout_height="@dimen/captcha_height"
            android:layout_below="@id/et_forget_psd_phone"
            android:layout_marginLeft="@dimen/margin_top"
            android:layout_marginRight="@dimen/margin_five"
            android:layout_marginTop="@dimen/margin_fifteen"
            android:layout_toLeftOf="@+id/btn_account_activate_get_captcha"
            android:inputType="number"
            android:hint="@string/str_input_captcha" />

        <Button
            android:id="@+id/btn_account_activate_get_captcha"
            style="@style/captcha_style"
            android:layout_below="@id/et_forget_psd_phone"
            android:text="@string/str_get_captcha"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_reset_psd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_reset_psd_new"
            style="@style/style_forgot_psd_edittext"
            android:hint="@string/str_reset_psd_new"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_reset_psd_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/captcha_height"
            android:layout_below="@id/et_reset_psd_new"
            android:layout_marginLeft="@dimen/margin_top"
            android:layout_marginRight="@dimen/margin_top"
            android:hint="@string/str_register_confirmpassword"
            android:inputType="textPassword" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_reset_psd_reset"
        style="@style/common_button_style"
        android:layout_below="@id/et_reset_psd_confirm"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/str_reset_psd_reset" />
    <TextView
        android:id="@+id/tv_warning_reset"
        style="@android:style/TextAppearance.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/btn_reset_psd_reset"
        android:gravity="center_horizontal"
        />
</LinearLayout>