<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/register_padding_left_right" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/register_padding_left_right"
        android:paddingRight="@dimen/register_padding_left_right"
        android:paddingTop="@dimen/register_padding_top" >

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_code"
            style="@style/register_edittext_style"
            android:hint="@string/register_verificationhint"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_next"
            style="@style/str_register_button"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/str_next" />

        <TextView
            android:id="@+id/tv_sendagain"
            style="@style/verified_text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:gravity="center_horizontal"
            android:text="@string/register_sendagain" />
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/progressbar_layout_wait" />

</RelativeLayout>