<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_create"
        android:layout_marginLeft="@dimen/margin_create"
        android:layout_marginRight="@dimen/margin_create"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/pb_sending_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="true"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_create_title"
            android:textSize="@dimen/size_font_create"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:background="@drawable/edit_text_box"
            android:layout_marginTop="@dimen/margin_five"
            android:paddingLeft="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"/>
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_request_time"
            android:textSize="@dimen/size_font_create"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/et_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_box"
            android:editable="false"
            android:hint="@string/tap_to_select"
            android:layout_marginTop="@dimen/margin_five"
            android:paddingLeft="@dimen/margin_standard"
            android:textSize="@dimen/margin_fifteen"
            android:layout_marginBottom="@dimen/margin_standard"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_deadline"
            />
        <EditText
            android:id="@+id/et_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_box"
            android:editable="false"
            android:hint="@string/tap_to_select"
            android:layout_marginTop="@dimen/margin_five"
            android:paddingLeft="@dimen/margin_standard"
            android:textSize="@dimen/margin_fifteen"
            android:layout_marginBottom="@dimen/margin_standard"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_dest"
            android:textSize="@dimen/size_font_create"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/et_dest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:background="@drawable/edit_text_box"
            android:layout_marginTop="@dimen/margin_five"
            android:paddingLeft="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"/>
        <TextView
            android:id="@+id/tv_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_font_create"
            android:layout_gravity="center_vertical"/>
        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="5"
            android:layout_marginBottom="@dimen/margin_standard"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_remark"
            />
        <EditText
            android:id="@+id/et_remark"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_remark"
            android:background="@drawable/edit_text_box"
            android:layout_marginTop="@dimen/margin_five"
            android:gravity="top"
            android:layout_marginBottom="@dimen/margin_standard"
            />
        <Button
            android:id="@+id/btn_sub"
            style="@style/str_register_button"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_button"
            android:textStyle="bold"
            android:text="@string/str_submit" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>